--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Standards.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Standards.cshtml
@@ -9,6 +9,8 @@
 
 <h1 id="heading" class="heading-xlarge">Standards</h1>
 
+@Html.RouteLink("Download Standards", ManagementRouteNames.AdminStandardsCsv)
+
 <table>
     <tr>
         <th>ID</th>
@@ -40,3 +42,5 @@
         }
     }
 </table>
+
+
