ra-317: Fix minor code defects. Add link to empty a tag and add view application link to successful email notification.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -52,7 +52,7 @@
                     Your application for @applicationNotification.Title has been @successOrUnsuccessful.
                     @if (applicationNotification.UnsuccessfulReason != null)
                     {
-                        <a>Read feedback</a>
+                        <a href="@Url.RouteUrl(CandidateRouteNames.CandidateApplicationFeedback, new { id = applicationNotification.VacancyId })">Read feedback</a>
                     }                        
                 </p>
             }
