--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -4,7 +4,6 @@
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Send unsuccessful decision";
-
 }
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmSuccessfulApprenticeshipApplication, FormMethod.Post))
@@ -13,20 +12,38 @@
     @Html.HiddenFor(m => m.ApplicationSelection.ApplicationId)
     @Html.HiddenFor(m => m.ApplicationSelection.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.ApplicationSelection.FilterType)
-    @Html.HiddenFor(m => m.ApplicationSelection.PageSize)    
-
+    @Html.HiddenFor(m => m.ApplicationSelection.PageSize)
+    
     <div>
-        <div class="hgroup">
-            <h1 class="heading-xlarge med-btm-margin">Inform @Model.ApplicantDetails.Name of unsuccessful application</h1>
-        </div>
+        @if (Model.BulkRejectApplications != null && Model.BulkRejectApplications.Any())
+        {
+            <div class="hgroup">
+                <h1 class="heading-xlarge med-btm-margin">Make selected candidates unsuccessful</h1>
+                <ul class="grey-background">
+                    @foreach (var application in Model.BulkRejectApplications)
+                    {
+                        @Html.Hidden("bulkRejectApplications",application.ApplicationId)
+                        <li>@application.FirstName @application.LastName</li>
+                    }
+                </ul>
+                @Html.RouteLink("Edit list",RecruitmentRouteNames.BulkDeclineCandidates,new {vacancyreferencenumber = @Model.Vacancy.VacancyReferenceNumber})
+            </div>
+        }
+        else
+        {
+            <div class="hgroup">
+                <h1 class="heading-xlarge med-btm-margin">Inform @Model.ApplicantDetails.Name of unsuccessful application</h1>
+            </div>
 
-        <p> You are about to inform this candidate that they have not been selected for the role of @Model.Vacancy.Title</p>
-        <h2 class="heading-medium">What feedback would you like to share with the candidate?</h2>
+            <p> You are about to inform this candidate that they have not been selected for the role of @Model.Vacancy.Title</p>
+            <h2 class="heading-medium">What feedback would you like to share with the candidate?</h2>
+        }
+
 
         @Html.FormTextAreaFor(
-                m => m.UnSuccessfulReason,
-                containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
-                controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
+            m => m.UnSuccessfulReason,
+            containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
+            controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
 
         <section>
             <div class="form-group">
