Colour the information radiator

--- a/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
@@ -45,7 +45,7 @@
             </li>
         </ul>
         <ul class="vacancies-summary">
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedTodayColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesSubmittedToday</p>
                     <figcaption>
@@ -53,7 +53,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedYesterdayColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesSubmittedYesterday</p>
                     <figcaption>
@@ -61,7 +61,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedTwoDaysAgoColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesSubmittedTwoDaysAgo</p>
                     <figcaption>
@@ -69,7 +69,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedThreeDaysAgoColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesSubmittedThreeDaysAgo</p>
                     <figcaption>
@@ -79,7 +79,7 @@
             </li>
         </ul>
         <ul class="vacancies-summary">
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedTodayColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesReviewedToday</p>
                     <figcaption>
@@ -87,7 +87,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedYesterdayColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesReviewedYesterday</p>
                     <figcaption>
@@ -95,7 +95,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedTwoDaysAgoColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesReviewedTwoDaysAgo</p>
                     <figcaption>
@@ -103,7 +103,7 @@
                     </figcaption>
                 </figure>
             </li>
-            <li>
+            <li style="background-color: @Model.VacanciesReviewedThreeDaysAgoColour; height: 95px">
                 <figure class="data">
                     <p class="count">@Model.VacanciesReviewedThreeDaysAgo</p>
                     <figcaption>
