--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyPosting.EmployerSearchViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Employer.EmployerSearchViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Create New Vacancy - Add Employer";
 }
