--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -1,6 +1,7 @@
-﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyPosting
+﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Employer
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyPosting
 @using SFA.Apprenticeships.Web.Recruit.Constants
-@model EmployerSearchViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Employer.EmployerSearchViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Select an employer for your vacancy";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -9,7 +10,7 @@
     var vacancyGuidValue = Model.VacancyGuid ?? Guid.NewGuid();
     var edsErnSearchSelected = Model.FilterType == EmployerFilterType.EdsUrn ? selected : null;
     var nameAndLocationSearchSelected = Model.FilterType == EmployerFilterType.NameAndLocation ? selected : null;
-    var noResults = (Model.EmployerResults == null || !Model.EmployerResults.Any()) && (Model.EmployerResultsPage == null || Model.EmployerResultsPage.ResultsCount == 0);
+    var noResults = Model.NoResults;
     var detailsOpen = noResults && (!string.IsNullOrWhiteSpace(edsErnSearchSelected) || !string.IsNullOrWhiteSpace(nameAndLocationSearchSelected)) ? "class=open open" : "";
 }
 <div class="grid-wrapper">
